--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "@sveltejs/adapter-netlify": "^2.0.8"
+  },
+  "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.2"
   }
 }
