debugged authService.js

--- a/Buchungstrainer/package.json
+++ b/Buchungstrainer/package.json
@@ -29,5 +29,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.34.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@auth0/auth0-spa-js": "^2.1.2"
+	}
 }
