--- a/Buchungstrainer/package.json
+++ b/Buchungstrainer/package.json
@@ -12,7 +12,7 @@
     "test": "vitest",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write ."
-    },
+  },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.27.4",
@@ -33,7 +33,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@auth0/auth0-spa-js": "^2.1.2",
+    "@auth0/nextjs-auth0": "^3.3.0",
     "express": "^4.18.2"
   },
   "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
