--- a/Buchungstrainer/package.json
+++ b/Buchungstrainer/package.json
@@ -33,7 +33,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.3.0",
+    "@auth0/auth0-spa-js": "^2.1.2",
+    "@types/auth0-js": "^9.21.5",
     "express": "^4.18.2"
   },
   "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
