--- a/Buchungstrainer/.prettierrc
+++ b/Buchungstrainer/.prettierrc
@@ -1,9 +1,10 @@
 {
-	"useTabs": true,
-	"singleQuote": false,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+    "singleQuote": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "tabWidth": 4,
+    "printWidth": 100,
+    "plugins": ["prettier-plugin-svelte"],
+    "pluginSearchDirs": ["."],
+    "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
