configure code layout settings

--- a/Buchungstrainer/.prettierrc
+++ b/Buchungstrainer/.prettierrc
@@ -4,6 +4,8 @@
     "bracketSpacing": true,
     "tabWidth": 4,
     "printWidth": 100,
+    "semi": true,
+    "svelteSortOrder": "scripts-markup-styles-options",
     "plugins": ["prettier-plugin-svelte"],
     "pluginSearchDirs": ["."],
     "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
