--- a/Buchungstrainer/package.json
+++ b/Buchungstrainer/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "buchungstrainer",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "nodemon server.js",
-    "start": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "test": "vitest",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.27.4",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte": "^2.30.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.10.1",
-    "svelte": "^4.0.5",
-    "svelte-check": "^3.6.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^4.4.2",
-    "vitest": "^0.34.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "@auth0/auth0-spa-js": "^2.1.2",
-    "@types/auth0-js": "^9.21.5",
-    "express": "^4.18.2"
-  },
-  "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
-  "main": "svelte.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "buchungstrainer",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "nodemon server.js",
+        "start": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "test": "vitest",
+        "lint": "prettier --plugin-search-dir . --check . && eslint .",
+        "lint:fix": "prettier --plugin-search-dir . --check . --write . && eslint .",
+        "format": "prettier --plugin-search-dir . --write ."
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^2.0.0",
+        "@sveltejs/kit": "^1.27.4",
+        "@typescript-eslint/eslint-plugin": "^6.0.0",
+        "@typescript-eslint/parser": "^6.0.0",
+        "eslint": "^8.28.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-svelte": "^2.30.0",
+        "nodemon": "^3.0.1",
+        "prettier": "^2.8.0",
+        "prettier-plugin-svelte": "^2.10.1",
+        "svelte": "^4.0.5",
+        "svelte-check": "^3.6.0",
+        "tslib": "^2.4.1",
+        "typescript": "^5.0.0",
+        "vite": "^4.4.2",
+        "vitest": "^0.34.0"
+    },
+    "type": "module",
+    "dependencies": {
+        "@auth0/auth0-spa-js": "^2.1.2",
+        "@types/auth0-js": "^9.21.5",
+        "express": "^4.18.2"
+    },
+    "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
+    "main": "svelte.config.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
