--- a/Buchungstrainer/package.json
+++ b/Buchungstrainer/package.json
@@ -3,8 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "dev": "nodemon server.js",
-        "start": "vite dev",
+        "dev": "vite dev",
         "build": "vite build",
         "preview": "vite preview",
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -22,7 +21,6 @@
         "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte": "^2.30.0",
-        "nodemon": "^3.0.1",
         "prettier": "^2.8.0",
         "prettier-plugin-svelte": "^2.10.1",
         "svelte": "^4.0.5",
@@ -35,8 +33,7 @@
     "type": "module",
     "dependencies": {
         "@auth0/auth0-spa-js": "^2.1.2",
-        "@types/auth0-js": "^9.21.5",
-        "express": "^4.18.2"
+        "@types/auth0-js": "^9.21.5"
     },
     "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte).",
     "main": "svelte.config.js",
