adjust eol settings

--- a/Buchungstrainer/.prettierrc
+++ b/Buchungstrainer/.prettierrc
@@ -5,6 +5,7 @@
     "tabWidth": 4,
     "printWidth": 100,
     "semi": true,
+    "endOfLine": "lf",
     "svelteSortOrder": "scripts-markup-styles-options",
     "plugins": ["prettier-plugin-svelte"],
     "pluginSearchDirs": ["."],
