--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "svelte.plugin.svelte.format.config.printWidth": 100,
     "svelte.plugin.svelte.format.config.svelteSortOrder": "scripts-markup-styles-options",
     "prettier.trailingComma": "none",
-    "prettier.singleQuote": false
+    "prettier.singleQuote": false,
+    "files.eol": "\n"
 }
