--- a/Buchungstrainer/tsconfig.json
+++ b/Buchungstrainer/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "extends": "./.svelte-kit/tsconfig.json",
     "compilerOptions": {
+        "paths": {
+            "$interfaces": ["./src/interfaces"]
+        },
         "allowJs": true,
         "checkJs": true,
         "esModuleInterop": true,
